# AWord-Theia

./: .gitignore  CLAUDE.user.md  Cai_Dat_Cong_Cu.cmd  Cap_Nhat_Cau_Hinh.ps1  Cap_Nhat_Claude.ps1  Cap_Nhat_QuyTac.ps1  Dong_Goi_AWord.bat  GHI_CHU_PHAT_HANH.md  Ket_Noi_KhoDuLieu.cmd  Kiem_Tra_AWord.cmd  Phat_Hanh_AWord.ps1  README.md  package.json  settings.json
aword-chat/: README.md  package.json
aword-chat/src/browser/: aword-chat-contribution.ts  aword-chat-frontend-module.ts  aword-chat-widget.test.ts  aword-chat-widget.tsx  aword-layout-contribution.ts  aword-logo.ts  aword-menu-contribution.ts  aword-setup-prompts.ts  aword-welcome-contribution.ts  aword-welcome-widget.tsx
browser-app/: package.json
electron-app/: package.json
electron-app/resources/splash/: index.html
electron-app/scripts/: fetch-pytools.mjs  fix-cmd-crlf.cjs  gen-installer-nsh.cjs  inject-auto-update.cjs  inject-first-run-tools.cjs  lazy-office-plugin.cjs  patch-plugins-env.cjs  prepackage.cjs  stamp-version.cjs
i18n-vi-language-pack/: package.json
i18n-vi-language-pack/translations/: main.i18n.json  theia.i18n.json
scripts/: gen-i18n-vi-theia.mjs  gen-i18n-vi.mjs  localize-claude-code-vi.cjs  sync-i18n-vi.mjs  tu-dien-bo-sung.mjs
v3/: AWord-Lite.cmd  README.md
v3/backend/: server.js
v3/frontend/: app.js  index.html  style.css
v3/tauri/: .gitignore  package-lock.json  package.json
v3/tauri/src-tauri/: Cargo.toml  tauri.conf.json
v3/tauri/src-tauri/capabilities/: default.json
v3/tauri/src-tauri/icons/: icon.icns
v3/tauri/src-tauri/src/: main.rs
(+118 files in other folders)
