[package]
name = "aword-lite"
version = "0.1.0"
description = "AWord Lite - vo nhe cho AWord"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
rfd = "0.15"
